Add the flux policy exception to to GS and customer flux too to their own namespaces

--- a/bases/flux-app-v2/customer/kustomization.yaml
+++ b/bases/flux-app-v2/customer/kustomization.yaml
@@ -12,6 +12,9 @@ helmCharts:
         registry: gsoci.azurecr.io
       cilium:
         enforce: true
+      policyException:
+        enforce: true
+        namespace: flux-system
       clusterRoles:
         install: false
       crds:
