Remove policy exception from flux-system, as it is not allowed.

--- a/bases/flux-app-v2/customer/kustomization.yaml
+++ b/bases/flux-app-v2/customer/kustomization.yaml
@@ -13,8 +13,7 @@ helmCharts:
       cilium:
         enforce: true
       policyException:
-        enforce: true
-        namespace: flux-system
+        enforce: false
       clusterRoles:
         install: false
       crds:
