--- a/bases/flux-app-v2/customer/kustomization.yaml
+++ b/bases/flux-app-v2/customer/kustomization.yaml
@@ -6,14 +6,16 @@ helmCharts:
     namespace: flux-system
     repo: https://giantswarm.github.io/giantswarm-test-catalog/
     releaseName: customer-flux
-    version: 1.2.0-53874dd992da0f6bf1cc71cf23b4068cf8624a35
+    version: 1.2.0-ffb98941f2d061f4a8b465337096abf40f0e6fa3
     valuesInline:
       images:
         registry: gsoci.azurecr.io
       cilium:
         enforce: true
       policyException:
-        enforce: false
+        enforce: true
+        # It is restricted where policy exceptions can be created so lets put this one next to the deployer as well
+        namespace: flux-giantswarm
       clusterRoles:
         install: false
       crds:
