--- a/extras/flux/patch-source-controller-deployment-socat.yaml
+++ b/extras/flux/patch-source-controller-deployment-socat.yaml
@@ -12,9 +12,9 @@
       - -c
       - |
         # Fallback to static argument if injected env var doesn't exist
-        export HTTP_PROXY=\${HTTP_PROXY:=${proxy_hostname}:${proxy_port}}
+        export HTTP_PROXY=$${HTTP_PROXY:=${proxy_hostname}:${proxy_port}}
 
-        export PROXY_HOSTNAME=$(echo \${HTTP_PROXY#http://} | cut -d":" -f1)
-        export PROXY_PORT=$(echo \${HTTP_PROXY#http://} | cut -d":" -f2)
+        export PROXY_HOSTNAME=$(echo $${HTTP_PROXY#http://} | cut -d":" -f1)
+        export PROXY_PORT=$(echo $${HTTP_PROXY#http://} | cut -d":" -f2)
 
-        socat TCP4-LISTEN:8081,fork,reuseaddr PROXY:\${PROXY_HOSTNAME}:ssh.github.com:443,proxyport=\${PROXY_PORT}
+        socat TCP4-LISTEN:8081,fork,reuseaddr PROXY:$${PROXY_HOSTNAME}:ssh.github.com:443,proxyport=$${PROXY_PORT}
