Enable pod monitors

--- a/bases/flux-app-v2/giantswarm/kustomization.yaml
+++ b/bases/flux-app-v2/giantswarm/kustomization.yaml
@@ -12,6 +12,8 @@ helmCharts:
         registry: gsoci.azurecr.io
       cilium:
         enforce: true
+      podMonitors:
+        enabled: true
       policyException:
         enforce: true
         namespace: flux-giantswarm
