--- a/bases/flux-app-v2/customer/kustomization.yaml
+++ b/bases/flux-app-v2/customer/kustomization.yaml
@@ -12,6 +12,8 @@ helmCharts:
         registry: gsoci.azurecr.io
       cilium:
         enforce: true
+      podMonitors:
+        enabled: true
       policyException:
         enforce: true
         # It is restricted where policy exceptions can be created so lets put this one next to the deployer as well
