--- a/bases/flux-app-v2/customer/kustomization.yaml
+++ b/bases/flux-app-v2/customer/kustomization.yaml
@@ -6,14 +6,14 @@ helmCharts:
     namespace: flux-system
     repo: https://giantswarm.github.io/giantswarm-test-catalog/
     releaseName: customer-flux
-    version: 1.3.0-24575c8a8f583f2b1c4d586bd7bf491a2c3f9b51
+    version: 1.3.0-a249e697b7595873c2a817ec2d2b7953cb03dc98
     valuesInline:
       images:
         registry: gsoci.azurecr.io
       cilium:
         enforce: true
       podMonitors:
-        enabled: true
+        enabled: false
       policyException:
         enforce: true
         # It is restricted where policy exceptions can be created so lets put this one next to the deployer as well
