--- a/bases/flux-app-v2/customer/kustomization.yaml
+++ b/bases/flux-app-v2/customer/kustomization.yaml
@@ -4,9 +4,9 @@ helmCharts:
   - name: flux-app
     includeCRDs: false
     namespace: flux-system
-    repo: https://giantswarm.github.io/giantswarm-test-catalog/
+    repo: https://giantswarm.github.io/giantswarm-catalog/
     releaseName: customer-flux
-    version: 1.3.0-a249e697b7595873c2a817ec2d2b7953cb03dc98
+    version: 1.3.1
     valuesInline:
       images:
         registry: gsoci.azurecr.io
