Enable pod monitors for customer Flux

--- a/bases/flux-app-v2/customer/kustomization.yaml
+++ b/bases/flux-app-v2/customer/kustomization.yaml
@@ -13,7 +13,7 @@ helmCharts:
       cilium:
         enforce: true
       podMonitors:
-        enabled: false
+        enabled: true
       policyException:
         enforce: true
         # It is restricted where policy exceptions can be created so lets put this one next to the deployer as well
