Upgrade flux to v1.3.1 and add PSP removal patch to extras (#79)
Upgrade GS `flux-app` to `v1.3.1` and add support for the PSP removal
patch.

The flux change includes bumping upstream Flux to `v2.1.2`, fixes to
Cilium NPs, switch to PodMonitors, compliance with security standards
and usage of some needed Kyverno policy exception and general refactor
of the chart.

Clusters preparing upgrade to kubernetes `v1.25` should include the PSP
removal patch in their CMC repo. When all clusters are migrated, the
content of the patch will be merged to `flux-app` itself.

---------

Co-authored-by: Erkan Erol <erkanerol92@gmail.com>
Co-authored-by: Erkan Erol <erkan@giantswarm.io>
Co-authored-by: Laszlo Uveges <laszlo@giantswarm.io>
Co-authored-by: Łukasz Jakimczuk <lukasz.j@giantswarm.io>

--- a/bases/flux-app-v2/customer/kustomization.yaml
+++ b/bases/flux-app-v2/customer/kustomization.yaml
@@ -6,10 +6,18 @@ helmCharts:
     namespace: flux-system
     repo: https://giantswarm.github.io/giantswarm-catalog/
     releaseName: customer-flux
-    version: v1.0.0
+    version: 1.3.1
     valuesInline:
       images:
         registry: gsoci.azurecr.io
+      cilium:
+        enforce: true
+      podMonitors:
+        enabled: true
+      policyException:
+        enforce: true
+        # It is restricted where policy exceptions can be created so lets put this one next to the deployer as well
+        namespace: flux-giantswarm
       clusterRoles:
         install: false
       crds:
