--- a/bases/flux-app-v2/giantswarm/kustomization.yaml
+++ b/bases/flux-app-v2/giantswarm/kustomization.yaml
@@ -6,10 +6,17 @@ helmCharts:
     namespace: flux-giantswarm
     repo: https://giantswarm.github.io/giantswarm-catalog/
     releaseName: flux-giantswarm
-    version: v1.0.0
+    version: 1.3.1
     valuesInline:
       images:
         registry: gsoci.azurecr.io
+      cilium:
+        enforce: true
+      podMonitors:
+        enabled: true
+      policyException:
+        enforce: true
+        namespace: flux-giantswarm
       clusterRoles:
         install: false
       crds:
@@ -43,7 +50,7 @@ patches:
       path: /metadata/name
       value: crd-controller-giantswarm
     - op: replace
-      path: /rules/10/resourceNames/0
+      path: /rules/0/resourceNames/0
       value: flux-app-pvc-psp-giantswarm
 - target:
     kind: PodSecurityPolicy
