--- a/bases/flux-giantswarm-resources/configuration-management/shared-configs-gitrepository.yaml
+++ b/bases/flux-giantswarm-resources/configuration-management/shared-configs-gitrepository.yaml
@@ -10,4 +10,4 @@ spec:
   secretRef:
     name: shared-configs-ssh-credentials
   timeout: 60s
-  url: ssh://git@ssh.github.com:${github_port}/giantswarm/shared-configs
+  url: ssh://git@ssh.github.com:443/giantswarm/shared-configs
