--- a/bases/flux-app-v2/giantswarm/kustomization.yaml
+++ b/bases/flux-app-v2/giantswarm/kustomization.yaml
@@ -52,6 +52,16 @@ patches:
     - op: replace
       path: /metadata/name
       value: crd-controller-giantswarm
+    - op: replace
+      path: /rules/0/resourceNames/0
+      value: flux-app-pvc-psp-giantswarm
+- target:
+    kind: PodSecurityPolicy
+    name: flux-app-pvc-psp
+  patch: |-
+    - op: replace
+      path: /metadata/name
+      value: flux-app-pvc-psp-giantswarm
 - target:
     kind: ClusterRoleBinding
     name: cluster-reconciler
@@ -160,6 +170,7 @@ patches:
 # Keeping this because of vaultless helper + upstream bug in kustomize to apply patch files with multiple documents
 patchesStrategicMerge:
 - patch-kustomize-controller.yaml
+- patch-pvc-psp.yaml
 resources:
 - resource-namespace.yaml
 - resource-rbac.yaml
