--- a/bases/flux-giantswarm-resources/resource-gitrepositories.yaml
+++ b/bases/flux-giantswarm-resources/resource-gitrepositories.yaml
@@ -1,20 +1,6 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
-  name: collection
-  namespace: flux-giantswarm
-spec:
-  interval: 30s
-  ref:
-    branch: master
-  secretRef:
-    name: github-giantswarm-https-credentials
-  timeout: 5m
-  url: "{replaced in bases/provider/<PROVIDER>/kustomization.yaml}"
----
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: GitRepository
-metadata:
   name: management-clusters-fleet
   namespace: flux-giantswarm
 spec:
@@ -22,9 +8,10 @@ spec:
   ref:
     branch: main
   secretRef:
-    name: github-giantswarm-https-credentials
+    name: giantswarm-clusters-ssh-credentials
   timeout: 60s
-  url: https://github.com/giantswarm/management-clusters-fleet
+  # The `github_port` will be changed by postBuilds to 8081 for private clusters
+  url: ssh://git@ssh.github.com:${github_port:=443}/giantswarm/${customer_codename}-management-clusters.git
 ---
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
@@ -32,10 +19,33 @@ metadata:
   name: giantswarm-config
   namespace: flux-giantswarm
 spec:
+  include:
+    - repository:
+        name: shared-configs
+      fromPath: default
+      toPath: default
+    - repository:
+        name: shared-configs
+      fromPath: include
+      toPath: include
   interval: 30s
   ref:
     branch: main
   secretRef:
-    name: github-giantswarm-https-credentials
+    name: configs-ssh-credentials
   timeout: 60s
-  url: https://github.com/giantswarm/config
+  url: ssh://git@ssh.github.com:${github_port:=443}/giantswarm/${customer_codename}-configs.git
+---
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: GitRepository
+metadata:
+  name: shared-configs
+  namespace: flux-giantswarm
+spec:
+  interval: 30s
+  ref:
+    branch: main
+  secretRef:
+    name: shared-configs-ssh-credentials
+  timeout: 60s
+  url: ssh://git@ssh.github.com:${github_port:=443}/giantswarm/shared-configs
