--- a/bases/provider/capz/flux-v2/collection-gitrepository.yaml
+++ b/bases/provider/capz/flux-v2/collection-gitrepository.yaml
@@ -1,13 +1,13 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
-  name: shared-configs
+  name: collection
   namespace: flux-giantswarm
 spec:
   interval: 30s
   ref:
     branch: main
   secretRef:
-    name: shared-configs-ssh-credentials
-  timeout: 60s
-  url: ssh://git@ssh.github.com:443/giantswarm/shared-configs
+    name: github-giantswarm-https-credentials
+  timeout: 5m
+  url: https://github.com/giantswarm/capz-app-collection
