--- a/bases/provider/cloud-director/flux-v2/kustomization.yaml
+++ b/bases/provider/cloud-director/flux-v2/kustomization.yaml
@@ -1,31 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-replacements:
-  # Points collection GitRepository to correct URL
-  - source:
-      kind: ConfigMap
-      name: provider-data
-      fieldPath: data.collection_url
-    targets:
-      - select:
-          kind: GitRepository
-          name: collection
-          namespace: flux-giantswarm
-        fieldPaths:
-          - spec.url
-  - source:
-      kind: ConfigMap
-      name: provider-data
-      fieldPath: data.branch
-    targets:
-      - select:
-          kind: GitRepository
-          name: collection
-          namespace: flux-giantswarm
-        fieldPaths:
-          - spec.ref.branch
 resources:
   - ../../../flux-app-v2/customer
   - ../../../flux-app-v2/giantswarm
   - ../../../flux-giantswarm-resources
+  - collection-gitrepository.yaml
   - configmap-provider-data.yaml
