--- a/extras/external-secrets/podmonitor-external-secrets.yaml
+++ b/extras/external-secrets/podmonitor-external-secrets.yaml
@@ -1,6 +1,8 @@
 apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
+  labels:
+    application.giantswarm.io/team: honeybadger
   name: external-secrets
   namespace: external-secrets
 spec:
@@ -16,6 +18,8 @@ spec:
 apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
+  labels:
+    application.giantswarm.io/team: honeybadger
   name: external-secrets-webhook
   namespace: external-secrets
 spec:
@@ -31,6 +35,8 @@ spec:
 apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
+  labels:
+    application.giantswarm.io/team: honeybadger
   name: external-secrets-cert-controller
   namespace: external-secrets
 spec:
