--- a/bases/provider/gcp/flux-v2/kustomization.yaml
+++ b/bases/provider/gcp/flux-v2/kustomization.yaml
@@ -1,8 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+patches:
+  - path: patch-collection-gitrepository.yaml
 resources:
   - ../../../flux-app-v2/customer
   - ../../../flux-app-v2/giantswarm
   - ../../../flux-giantswarm-resources
-  - collection-gitrepository.yaml
   - configmap-provider-data.yaml
