After migrations cleanup (#97)
## Some hints on changes to this repository

### Public information only

This is a public repository. The content and commit history is visible
to everyone.

Do not provide any **customer-specific details**. Use the customer's
repository for that.

### Descriptive PR title

Please write a descriptive pull request title. In this repo we don't
maintain a changelog file, so the PR title (becoming the commit message
after squash-merge) is the main information to understand a change in
retrospect.

---------

Co-authored-by: Laszlo Uveges <laszlo@giantswarm.io>

--- a/bases/provider/aws-china/flux-v2/kustomization.yaml
+++ b/bases/provider/aws-china/flux-v2/kustomization.yaml
@@ -4,6 +4,7 @@ patches:
   - path: patch-helm-controller.yaml
   - path: patch-kustomize-controller.yaml
   - path: patch-source-controller.yaml
+  - path: patch-collection-gitrepository.yaml
 images:
   - name: giantswarm/fluxcd-helm-controller
     newName: giantswarm-registry.cn-shanghai.cr.aliyuncs.com/giantswarm/fluxcd-helm-controller
@@ -29,19 +30,6 @@ images:
     newName: giantswarm-registry.cn-shanghai.cr.aliyuncs.com/giantswarm/external-secrets
   - name: giantswarm/fluxcd-kustomize-controller
     newName: giantswarm-registry.cn-shanghai.cr.aliyuncs.com/giantswarm/fluxcd-kustomize-controller
-replacements:
-  # Points collection GitRepository to correct URL
-  - source:
-      kind: ConfigMap
-      name: provider-data
-      fieldPath: data.collection_url
-    targets:
-      - select:
-          kind: GitRepository
-          name: collection
-          namespace: flux-giantswarm
-        fieldPaths:
-          - spec.url
 resources:
   - ../../../flux-app-v2/customer
   - ../../../flux-app-v2/giantswarm
