--- a/bases/provider/azure/flux-v2/kustomization.yaml
+++ b/bases/provider/azure/flux-v2/kustomization.yaml
@@ -1,18 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-replacements:
-  # Points collection GitRepository to correct URL
-  - source:
-      kind: ConfigMap
-      name: provider-data
-      fieldPath: data.collection_url
-    targets:
-      - select:
-          kind: GitRepository
-          name: collection
-          namespace: flux-giantswarm
-        fieldPaths:
-          - spec.url
+patches:
+  - path: patch-collection-gitrepository.yaml
 resources:
   - ../../../flux-app-v2/customer
   - ../../../flux-app-v2/giantswarm
