--- a/bases/provider/vsphere/flux-v2/kustomization.yaml
+++ b/bases/provider/vsphere/flux-v2/kustomization.yaml
@@ -1,27 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 patches:
-  - target:
-      kind: GitRepository
-      name: collection
-      namespace: flux-giantswarm
-    patch: |-
-      - op: replace
-        path: /spec/ref/branch
-        value: main
-replacements:
-  # Points collection GitRepository to correct URL
-  - source:
-      kind: ConfigMap
-      name: provider-data
-      fieldPath: data.collection_url
-    targets:
-      - select:
-          kind: GitRepository
-          name: collection
-          namespace: flux-giantswarm
-        fieldPaths:
-          - spec.url
+  - path: patch-collection-gitrepository.yaml
 resources:
   - ../../../flux-app-v2/customer
   - ../../../flux-app-v2/giantswarm
