--- a/bases/provider/capz/kustomization.yaml
+++ b/bases/provider/capz/kustomization.yaml
@@ -1,5 +1,7 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+bases:
+- ../../flux-app/customer
+- ../../flux-app/giantswarm
+- ../../flux-giantswarm-resources
 replacements:
   # Points collection GitRepository to correct URL
   - source:
@@ -25,7 +27,4 @@ replacements:
         fieldPaths:
           - spec.ref.branch
 resources:
-  - ../../../flux-app-v2/customer
-  - ../../../flux-app-v2/giantswarm
-  - ../../../flux-giantswarm-resources
-  - configmap-provider-data.yaml
+- configmap-provider-data.yaml
