--- a/bases/provider/vsphere/kustomization.yaml
+++ b/bases/provider/vsphere/kustomization.yaml
@@ -1,5 +1,7 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+bases:
+- ../../flux-app/customer
+- ../../flux-app/giantswarm
+- ../../flux-giantswarm-resources
 patches:
   - target:
       kind: GitRepository
@@ -23,7 +25,4 @@ replacements:
         fieldPaths:
           - spec.url
 resources:
-  - ../../../flux-app-v2/customer
-  - ../../../flux-app-v2/giantswarm
-  - ../../../flux-giantswarm-resources
-  - configmap-provider-data.yaml
+- configmap-provider-data.yaml
