--- a/extras/flux/patch-remove-psp.yaml
+++ b/extras/flux/patch-remove-psp.yaml
@@ -1,3 +1,8 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: PatchJson6902
+metadata:
+  name: remove-psp
+patches:
 - op: add
   path: /patchesJson6902
   value:
