--- a/bases/flux-app-v2/giantswarm/resource-rbac.yaml
+++ b/bases/flux-app-v2/giantswarm/resource-rbac.yaml
@@ -1,4 +1,18 @@
 apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: flux-crd-controller-giantswarm
+  namespace: default
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: crd-controller-giantswarm
+subjects:
+- kind: ServiceAccount
+  name: automation
+  namespace: default
+---
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: flux-giantswarm-automation
