--- a/bases/flux-giantswarm-resources/resource-gitrepositories.yaml
+++ b/bases/flux-giantswarm-resources/resource-gitrepositories.yaml
@@ -8,7 +8,7 @@ spec:
   ref:
     branch: main
   timeout: 5m
-  url: ssh://git@ssh.github.com:${github_port:=443}/giantswarm/management-cluster-bases.git
+  url: https://github.com/giantswarm/management-cluster-bases
 ---
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
