--- a/bases/flux-app-v2/giantswarm/resource-rbac.yaml
+++ b/bases/flux-app-v2/giantswarm/resource-rbac.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: flux-crd-controller-giantswarm
+  name: flux-crd-controller
   namespace: default
 roleRef:
   apiGroup: rbac.authorization.k8s.io
