--- a/bases/flux-app-v2/customer/kustomization.yaml
+++ b/bases/flux-app-v2/customer/kustomization.yaml
@@ -36,6 +36,9 @@ patches:
     - op: add
       path: /metadata/namespace
       value: flux-system
+    - op: replace
+      path: /roleRef/name
+      value: crd-controller-giantswarm
 - target:
     kind: ClusterRoleBinding
     name: cluster-reconciler
