--- a/bases/provider/vsphere/flux-v2/patch-collection-gitrepository.yaml
+++ b/bases/provider/vsphere/flux-v2/patch-collection-gitrepository.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: flux-giantswarm
 spec:
   ref:
-    branch: main
+    branch: bootstrap-clusters-k8sv1.25
   url: https://github.com/giantswarm/vsphere-app-collection
