Add vintage catalogs base with test version of appcatalog chart

--- a/bases/catalogs/vintage/kustomization.yaml
+++ b/bases/catalogs/vintage/kustomization.yaml
@@ -1,4 +1,15 @@
-# This base is meant for CAPx, for Vintage clusters please use the kustomization in the vintage folder
+# This catalogs kustomization is meant for Vintage clusters
+patches:
+  - target:
+      kind: HelmRelease
+      name: appcatalog-.*
+      namespace: flux-giantswarm
+    patch: |-
+      - op: add
+        path: /spec/values/vintage
+        value:
+          appCatalog:
+            create: true
 resources:
 # External
 - external/appcatalog-helm-stable.yaml
