Testing ESO upgrade

--- a/extras/external-secrets/helmrelease-external-secrets.yaml
+++ b/extras/external-secrets/helmrelease-external-secrets.yaml
@@ -9,9 +9,9 @@ spec:
       chart: external-secrets
       sourceRef:
         kind: HelmRepository
-        name: giantswarm-catalog
+        name: giantswarm-test-catalog
         namespace: flux-giantswarm
-      version: 0.6.0
+      version: 0.8.4-b256343c026121e4adcc6d56c7a3ce0215613516
   install:
     remediation:
       retries: 10
