Add vintage catalogs base and upgrade to `appcatalog` v1.0.0 (#112)
Towards: https://github.com/giantswarm/giantswarm/issues/30335

The `appcatalog` version `v1.0.0` removes creating deprecated AppCatalog
CRs by default. But they all have the `helm.sh/resource-policy: keep`
annotation so they will be kept. (see:
https://github.com/giantswarm/appcatalog/blob/9bcdb8920a20889759e76a69c510bba05bb63c25/helm/appcatalog/templates/appcatalog.yaml#L6)

After that vintage MCs will be changed to use the new vintage catalog
base and for CAPx clusters the AppCatalog CRs will be manually removed.

--- a/bases/catalogs/kustomization.yaml
+++ b/bases/catalogs/kustomization.yaml
@@ -1,18 +1,6 @@
+# This base is meant for CAPx, for Vintage clusters please use the kustomization in the vintage folder
 resources:
 # External
-- external/appcatalog-helm-stable.yaml
+- external
 # Giant Swarm
-- giantswarm/appcatalog-cluster.yaml
-- giantswarm/appcatalog-cluster-test.yaml
-- giantswarm/appcatalog-control-plane-catalog.yaml
-- giantswarm/appcatalog-control-plane-test-catalog.yaml
-- giantswarm/appcatalog-default.yaml
-- giantswarm/appcatalog-default-test.yaml
-- giantswarm/appcatalog-giantswarm.yaml
-- giantswarm/appcatalog-giantswarm-operations-platform.yaml
-- giantswarm/appcatalog-giantswarm-operations-platform-test.yaml
-- giantswarm/appcatalog-giantswarm-playground.yaml
-- giantswarm/appcatalog-giantswarm-playground-test.yaml
-- giantswarm/appcatalog-giantswarm-test.yaml
-- giantswarm/appcatalog-releases.yaml
-- giantswarm/appcatalog-releases-test.yaml
+- giantswarm
