Disable anonymous access to zot

--- a/extras/zot/values.yaml
+++ b/extras/zot/values.yaml
@@ -45,7 +45,7 @@ configFiles:
                 {
                     "**":
                     {
-                          "anonymousPolicy": ["read"]
+                          "anonymousPolicy": []
                     }
                 }
             }
