Revert "Disable anonymous push to zot (#117)"
This reverts commit 049a4cca0b2e34ca4efff242c3204341d771f92d.

--- a/extras/zot/values.yaml
+++ b/extras/zot/values.yaml
@@ -38,17 +38,7 @@ configFiles:
         "http":
         {
             "address": "0.0.0.0",
-            "port": "5000",
-            "accessControl":
-            {
-                "repositories":
-                {
-                    "**":
-                    {
-                          "anonymousPolicy": []
-                    }
-                }
-            }
+            "port": "5000"
         },
         "log":
         {
