--- a/extras/zot/helm-release.yaml
+++ b/extras/zot/helm-release.yaml
@@ -17,7 +17,7 @@ spec:
       retries: 10
       remediateLastFailure: false
   interval: 1m
-  targetNamespace: flux-giantswarm
+  targetNamespace: zot
   timeout: 10m
   upgrade:
     remediation:
