--- a/extras/zot/values.yaml
+++ b/extras/zot/values.yaml
@@ -37,6 +37,40 @@ configFiles:
         },
         "http":
         {
+            "auth": 
+            {
+                "htpasswd": 
+                {
+                  "path": "/secret/htpasswd"
+                }
+            },
+            "accessControl": 
+            {
+                "metrics":
+                {
+                  "users": ["prom"]
+                },
+                "repositories": 
+                {
+                  "**": 
+                  {
+                      "anonymousPolicy": ["read"],
+                      "policies": 
+                      [
+                          {
+                              "users": ["admin"],
+                              "actions": 
+                              [
+                                  "read",
+                                  "create",
+                                  "update",
+                                  "delete"
+                              ]
+                          }
+                      ]
+                  }
+                }
+            },
             "address": "0.0.0.0",
             "port": "5000"
         },
