Single Flux Instance (#101)
## Description ##

Context:
https://github.com/giantswarm/giantswarm/issues/29194#issuecomment-1991968574

The essence of this PR is remove Customer Flux base entirely, but in two
stages. The first stage is to transfer the ownership over it to a
separate Kustomization CR, and hence removing them from the main stream
of resources delivered by the `flux` Kustomization. This is to stay true
to the rule of not enabling pruning on the main `flux` Kustomization CR
and to introduce an extra means of safety - an isolated Kustomization CR
and its inventory allows us to inspect resources before removing them,
so have a chance to make sure nothing more than necessary is being
removed. This way we also have a chance to migrate clusters one by one,
which is more controllable manner than a global change.

Postcondition for this stage is: Flux resources are managed by the
Giantswarm Flux and the Customer Flux, while still running, is limited
to the `flux-system` namespace only.

In the second stage we enable pruning on the new Kustomization CR and
then remove it from the MCB. The new Kustomization CR is itself managed
by Flux, the `flux` Kustomization CR to be precise, so when we remove it
it won't get deleted from clusters. This is the one-by-one migration
mechanism mentioned above. After removing it from the MCB it won't be
part of the desired state, hence we can go cluster by cluster and remove
it manually from it, by first inspecting the inventory and making sure
all is good. Thanks to the pruning being enabled the Customer Flux
resources will follow the deletion.

---------

Co-authored-by: Laszlo Uveges <laszlo@giantswarm.io>

--- a/bases/flux-app-v2/customer/kustomization.yaml
+++ b/bases/flux-app-v2/customer/kustomization.yaml
@@ -36,6 +36,9 @@ patches:
     - op: add
       path: /metadata/namespace
       value: flux-system
+    - op: replace
+      path: /roleRef/name
+      value: crd-controller-giantswarm
 - target:
     kind: ClusterRoleBinding
     name: cluster-reconciler
@@ -55,7 +58,7 @@ patches:
       path: /spec/template/spec/containers/0/args
       value:
         - --events-addr=http://notification-controller.$(RUNTIME_NAMESPACE).svc
-        - --watch-all-namespaces
+        - --watch-all-namespaces=false
         - --log-level=info
         - --log-encoding=json
         - --enable-leader-election
@@ -69,7 +72,7 @@ patches:
       path: /spec/template/spec/containers/0/args
       value:
         - --events-addr=http://notification-controller.$(RUNTIME_NAMESPACE).svc
-        - --watch-all-namespaces
+        - --watch-all-namespaces=false
         - --log-level=info
         - --log-encoding=json
         - --enable-leader-election
@@ -82,7 +85,7 @@ patches:
       path: /spec/template/spec/containers/0/args
       value:
         - --events-addr=http://notification-controller.$(RUNTIME_NAMESPACE).svc
-        - --watch-all-namespaces
+        - --watch-all-namespaces=false
         - --log-level=info
         - --log-encoding=json
         - --enable-leader-election
@@ -95,7 +98,7 @@ patches:
       path: /spec/template/spec/containers/0/args
       value:
         - --events-addr=http://notification-controller.$(RUNTIME_NAMESPACE).svc
-        - --watch-all-namespaces
+        - --watch-all-namespaces=false
         - --log-level=info
         - --log-encoding=json
         - --enable-leader-election
@@ -107,7 +110,7 @@ patches:
     - op: replace
       path: /spec/template/spec/containers/0/args
       value:
-        - --watch-all-namespaces
+        - --watch-all-namespaces=false
         - --log-level=info
         - --log-encoding=json
         - --enable-leader-election
@@ -120,13 +123,12 @@ patches:
       path: /spec/template/spec/containers/0/args
       value:
         - --events-addr=http://notification-controller.$(RUNTIME_NAMESPACE).svc
-        - --watch-all-namespaces
+        - --watch-all-namespaces=false
         - --log-level=info
         - --log-encoding=json
         - --enable-leader-election
         - --storage-path=/data
         - "--storage-adv-addr=source-controller.$(RUNTIME_NAMESPACE).svc"
 resources:
-  - resource-kyverno-policies.yaml
   - resource-namespace.yaml
   - resource-rbac.yaml
