--- a/bases/flux-app-v2/customer/resource-rbac.yaml
+++ b/bases/flux-app-v2/customer/resource-rbac.yaml
@@ -1,26 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: flux-crd-controller
-  namespace: default
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: crd-controller
-subjects:
-- kind: ServiceAccount
-  name: automation
-  namespace: default
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
   name: flux-crd-controller-sa
   namespace: default
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: crd-controller
+  name: crd-controller-giantswarm
 subjects:
 - kind: ServiceAccount
   name: helm-controller
@@ -216,4 +202,3 @@ subjects:
   kind: ServiceAccount
   name: "automation"
   namespace: "default"
-
