--- a/bases/flux-giantswarm-resources/resource-kustomizations.yaml
+++ b/bases/flux-giantswarm-resources/resource-kustomizations.yaml
@@ -2,6 +2,23 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
+  name: customer-flux-provider
+  namespace: flux-giantswarm
+spec:
+  interval: 1h
+  path: "bases/flux-app-v2/customer"
+  prune: false
+  retryInterval: 30s
+  timeout: 15m
+  wait: true
+  sourceRef:
+    kind: GitRepository
+    name: customer-flux-provider
+    namespace: flux-giantswarm
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
   name: crds
   namespace: flux-giantswarm
 spec:
