Move gitops-server to flux-giantswarm

--- a/extras/gitops-server/helmrelease-gitops-server.yaml
+++ b/extras/gitops-server/helmrelease-gitops-server.yaml
@@ -12,7 +12,7 @@ spec:
         kind: HelmRepository
         name: giantswarm-catalog
   interval: 1h0m0s
-  targetNamespace: flux-system
+  targetNamespace: flux-giantswarm
   values:
     giantswarm:
       images:
