enforce pss for caicloud

--- a/extras/crossplane/helmrelease-event-exporter.yaml
+++ b/extras/crossplane/helmrelease-event-exporter.yaml
@@ -22,3 +22,7 @@ spec:
     remediation:
       retries: 10
       remediateLastFailure: False
+  values:
+    global:
+      podSecurityStandards:
+        enforced: true
