set default to false

--- a/extras/crossplane/helmrelease-crossplane.yaml
+++ b/extras/crossplane/helmrelease-crossplane.yaml
@@ -29,4 +29,4 @@ spec:
       enabled: true
     global:
       podSecurityStandards:
-        enforced: ${pssEnforced:=true}
+        enforced: ${pssEnforced:=false}
