--- a/extras/zot-cache/kustomization.yaml
+++ b/extras/zot-cache/kustomization.yaml
@@ -6,6 +6,7 @@ generatorOptions:
 resources:
   - ./namespace.yaml
   - ./helm-release.yaml
+  - ./use-cache-values.yaml
 
 configMapGenerator:
   - name: zot-cache-values
