--- a/extras/zot-force-wc-usage-with-kyverno/kustomization.yaml
+++ b/extras/zot-force-wc-usage-with-kyverno/kustomization.yaml
@@ -1,5 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./enable-zot.yaml
-  - ./setup-zot.yaml
+  - ./configure-zot-as-cache-policy.yaml
