--- a/extras/external-secrets/helmrelease-external-secrets.yaml
+++ b/extras/external-secrets/helmrelease-external-secrets.yaml
@@ -11,7 +11,7 @@ spec:
         kind: HelmRepository
         name: giantswarm-catalog
         namespace: flux-giantswarm
-      version: 0.6.0
+      version: 0.10.0
   install:
     remediation:
       retries: 10
@@ -27,6 +27,7 @@ spec:
     giantswarm:
       crds:
         install: true
+        policyExceptionNamespace: "giantswarm"
         resources:
           requests:
             memory: "1000Mi"
