set the release name to avoid the default namespace-release scheme

--- a/extras/external-secrets/helmrelease-external-secrets.yaml
+++ b/extras/external-secrets/helmrelease-external-secrets.yaml
@@ -17,6 +17,7 @@ spec:
       retries: 10
       remediateLastFailure: False
   interval: 1m
+  releaseName: external-secrets
   targetNamespace: external-secrets
   timeout: 10m
   upgrade:
