Revert "Remove taylorbot token (#151)"
This reverts commit 65a9c6affe1daf5fa50cba84d81665a430d3ab64.

--- a/extras/vsphere-addons/gitrepository-vsphere-addons-collection.yaml
+++ b/extras/vsphere-addons/gitrepository-vsphere-addons-collection.yaml
@@ -7,4 +7,6 @@ spec:
   interval: 30s
   ref:
     branch: main
+  secretRef:
+    name: github-giantswarm-https-credentials
   url: https://github.com/giantswarm/vsphere-addons-app-collection
