--- a/bases/flux-giantswarm-resources/resource-gitrepositories.yaml
+++ b/bases/flux-giantswarm-resources/resource-gitrepositories.yaml
@@ -7,6 +7,8 @@ spec:
   interval: 30s
   ref:
     branch: master
+  secretRef:
+    name: github-giantswarm-https-credentials
   timeout: 5m
 ---
 apiVersion: source.toolkit.fluxcd.io/v1
