--- a/extras/crossplane/providers/upbound/aws/service-account.yaml
+++ b/extras/crossplane/providers/upbound/aws/service-account.yaml
@@ -21,17 +21,35 @@ metadata:
     provider-family-member: aws-family
 
 ---
+# Create the service account to be used for network discovery
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: xfn-network-discovery
+  namespace: crossplane
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: xfn-aws-provider-config-access
+rules:
+  - apiGroups:
+      - aws.upbound.io
+    resources:
+      - providerconfigs
+    verbs:
+      - get
+
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: replaced by kustomization
-  labels:
-    psp-binding: "true"
+  name: xfn-aws-provider-config-access
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: crossplane-use-psp
+  name: xfn-aws-provider-config-access
 subjects:
-- kind: ServiceAccount
-  name: replaced by kustomization
-  namespace: crossplane
+  - kind: ServiceAccount
+    name: xfn-network-discovery
+    namespace: crossplane
