Switch pss enforcement to enforced for crossplane

--- a/extras/crossplane/helmrelease-event-exporter.yaml
+++ b/extras/crossplane/helmrelease-event-exporter.yaml
@@ -25,4 +25,4 @@ spec:
   values:
     global:
       podSecurityStandards:
-        enforced: ${pssEnforced:=false}
+        enforced: ${pssEnforced:=true}
